[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/normalzombS.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.3861

[sub_resource type="Animation" id=2]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../detectarea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../detectarea:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 92.9065

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10.5395, 15.8286 )

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 0.185059, 1.89304 )
collision_layer = 2147483650
collision_mask = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 150
boostspeed = 200
acceleracao = 1.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="detectarea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectarea"]
position = Vector2( -0.166855, 0.33371 )
shape = SubResource( 1 )

[node name="attacktimer" type="Timer" parent="detectarea"]
wait_time = 0.3
one_shot = true

[node name="HitArea" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -0.166855, 0.33371 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HitArea"]
anims/damage = SubResource( 2 )

[node name="boostArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="boostArea"]
position = Vector2( -0.166855, 0.33371 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
[connection signal="body_entered" from="detectarea" to="." method="_on_Area2D2_body_entered"]
[connection signal="timeout" from="detectarea/attacktimer" to="." method="_on_attacktimer_timeout"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_entered" from="boostArea" to="." method="_on_boostArea_body_entered"]
[connection signal="body_exited" from="boostArea" to="." method="_on_boostArea_body_exited"]
